--- a/Backend/package.json
+++ b/Backend/package.json
@@ -11,6 +11,7 @@
   "author": "Lahiri",
   "license": "ISC",
   "dependencies": {
+    "@getbrevo/brevo": "^1.0.1",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
@@ -20,6 +21,7 @@
     "mysql2": "^3.6.5",
     "nodemon": "^3.0.1",
     "razorpay": "^2.9.2",
-    "sequelize": "^6.35.1"
+    "sequelize": "^6.35.1",
+    "sib-api-v3-sdk": "^8.5.0"
   }
 }
